kubernetes/apps/immich/immich/app/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/name: immich-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: immich-postgres
