kubernetes/apps/immich/immich/app/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  labels:
    app.kubernetes.io/name: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
