kubernetes/apps/immich/immich/app/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
