kubernetes/apps/immich/immich/app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  selector:
    app.kubernetes.io/name: immich-postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
