kubernetes/apps/immich/immich/app/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
spec:
  selector:
    app.kubernetes.io/name: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
