kubernetes/apps/immich/immich/app/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: 2283
      protocol: TCP
