kubernetes/apps/immich/immich/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  hostnames:
    - photos.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          namespace: immich
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
